--- a/.env
+++ b/.env
@@ -1,4 +1,13 @@
+# Live credentials
+ANGEL_ONE_API_KEY=HKPsKPk9
 ANGEL_ONE_USERNAME=A1127835
 ANGEL_ONE_PIN=8484
-ANGEL_ONE_API_KEY=HKPsKPk9
 ANGEL_ONE_TOTP_SECRET=AOFNEAMD5JIMMMZQVTKDGVPAQ4
+
+# Sandbox credentials
+ANGEL_ONE_SANDBOX_KEY=your_sandbox_key
+ANGEL_ONE_SANDBOX_USERNAME=A1127835
+ANGEL_ONE_SANDBOX_PIN=8484
+
+# Switch mode (LIVE or SANDBOX)
+APP_MODE=SANDBOX
