--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ ANGEL_ONE_API_KEY=HKPsKPk9
 ANGEL_ONE_USERNAME=A1127835
 ANGEL_ONE_PIN=8484
 ANGEL_ONE_TOTP_SECRET=AOFNEAMD5JIMMMZQVTKDGVPAQ4
+ORDER_FEED_URL="wss://tns.angelone.in/smart-order-update"
 
 # Sandbox credentials
 ANGEL_ONE_SANDBOX_KEY=your_sandbox_key
